# tybl

./: .clang-format  .clang-tidy  .clang-tidy.new  .gitignore  CMakeLists.txt  README.md  build.sh  index.md  shell.nix
apps/: CMakeLists.txt
apps/BallSorter/: CMakeLists.txt
apps/BallSorter/examples/: 006.txt  007.txt  010.txt  011.txt  013.txt  073.txt  077.txt  100.txt  103.txt  112.txt  115.txt  117.txt  120.txt  121.txt  122.txt  123.txt  129.txt  130.txt  134.txt  136.txt  139.txt  140.txt  145.txt  148.txt  153.txt  157.txt  160.txt  161.txt  162.txt  165.txt  183.txt  188.txt  25.txt  261.txt  298.txt  301.txt  304.txt  305.txt  4.txt  5.txt  (+9 more)
apps/BallSorter/src/: Board.cpp  Board.hpp  Edge.hpp  Executor.cpp  Executor.hpp  INode.hpp  NodeWeight.hpp  main.cpp
apps/Cocles/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  old_Makefile
apps/Cocles/apps/: cocles.cpp
apps/Cocles/cmake/: SetTargetMaxCompileWarnings.cmake
apps/Cocles/design/: database_design.md  monetary_representation.md  random_notes.md  rules.md
apps/Cocles/old_src/: main.cpp
apps/Cocles/old_src/ledger/: account.hpp  adjustment.hpp  event.hpp  identifier.hpp  ledger.cpp  ledger.hpp  money.cpp  money.hpp  transaction.hpp
apps/Cocles/src/: Application.cpp  Application.hpp  cocles.cpp  main.cpp
apps/Cocles/src/ledger/: Account.cpp  Account.hpp  Adjustment.cpp  Adjustment.hpp  ExtendedAdjustment.cpp  ExtendedAdjustment.hpp  Ledger.cpp  Ledger.hpp  Payee.cpp  Payee.hpp  Transaction.cpp  Transaction.hpp
apps/Cocles/src/util/: Date.hpp  Money.cpp  Money.hpp
apps/Cocles/test/: main.cpp
apps/Cocles/test/ledger/: Ledger.cpp
apps/Cocles/test/util/: Money.cpp
apps/DailyCodingProblem/: CMakeLists.txt
apps/DailyCodingProblem/src/: dcp001.cpp  dcp002.cpp
apps/Goon/: .gitignore  CMakeLists.txt  README.md
apps/Goon/src/: Dispatcher.cpp  Dispatcher.hpp  EventHandler.cpp  EventHandler.hpp  Keyboard.hpp  Signal.hpp  Widget.cpp  Widget.hpp  Window.cpp  Window.hpp  main.cpp  sfml_main.cpp
apps/Goon/tools/: include-what-you-use_mapping-file.imp
apps/Goon/tools/cmake/: SetTargetMaxCompileWarnings.cmake
apps/GpsLogger/: CMakeLists.txt
apps/GpsLogger/src/: main.cpp
apps/HelloWorld/: CMakeLists.txt
apps/LearnFLTK/: CMakeLists.txt
apps/LearnFLTK/src/: buttons.cpp  calculator.cpp  glinput.cpp  hello_world.cpp  mouse_coord.cpp  progress_bar.cpp
apps/SFML/: CMakeLists.txt
apps/SFML/src/: main.cpp
apps/SensorAggregator/: .clang-tidy  CMakeLists.txt
apps/SensorAggregator/app/: CMakeLists.txt
apps/SensorAggregator/app/collect/: main.cpp  server.cpp  server.hpp
apps/SensorFusion/: settings.gradle
apps/SensorFusion/app/: build.gradle
apps/SensorFusion/gradle/wrapper/: gradle-wrapper.properties
apps/StackSolver/: CMakeLists.txt
apps/StackSolver/doc/: README.md
apps/StackSolver/examples/: 001.txt  005.txt  015.txt  088.txt  091.txt  112.txt  129.txt  130.txt  165.txt  167.txt  169.txt  177.txt  183.txt  185.txt  212.txt  240.txt  253.txt  262.txt  263.txt  264.txt  267.txt  270.txt  288.txt  289.txt  290.txt  291.txt  292.txt  294.txt  296.txt  297.txt  300.txt  306.txt  307.txt  309.txt  312.txt  317.txt  319.txt  320.txt  321.txt  323.txt  (+22 more)
apps/StackSolver/src/: AStarSearch.hpp  Board.cpp  Board.hpp  INode.hpp  edge.hpp  executor.cpp  executor.hpp  find_all.cpp  i_node.cpp  i_node.hpp  main.cpp  node_weight.hpp
apps/StackSolver/test/: CMakeLists.txt
apps/StackSorter/: CMakeLists.txt
apps/StackSorter/examples/: 002.txt  003.txt  008.txt  009.txt  012.txt  014.txt  072.txt
apps/StackSorter/src/: Executor.cpp  Executor.hpp
apps/TaskOgre/: .clang-tidy  CMakeLists.txt  README.md
apps/TaskOgre/app/: CMakeLists.txt
apps/TaskOgre/doc/: README.md
apps/TaskOgre/src/: CMakeLists.txt
apps/TaskOgre/test/: CMakeLists.txt
apps/TaskWarrior/: .clang-tidy  CMakeLists.txt  cmake.h.in
apps/TaskWarrior/src/: CLI2.cpp  Color.cpp  Color.h  Config.cpp  Context.cpp  DOM.cpp  Dates.cpp  Eval.cpp  FS.cpp  Filter.cpp  Hooks.cpp  ISO8601.cpp  JSON.cpp  Lexer.cpp  Msg.cpp  Nibbler.cpp  RX.cpp  TDB2.cpp  TLSClient.cpp  Task.cpp  Timer.cpp  Variant.cpp  ViewTask.cpp  ViewText.cpp  ViewText.h  calc.cpp  dependency.cpp  feedback.cpp  interactive.cpp  legacy.cpp  lex.cpp  main.cpp  recur.cpp  rules.cpp  sort.cpp  text.cpp  utf8.cpp  util.cpp  wcwidth6.cpp
apps/TaskWarrior/test/: autocomplete.t.cpp  col.t.cpp  color.t.cpp  config.t.cpp  fs.t.cpp  i18n.t.cpp  iso8601d.t.cpp  iso8601p.t.cpp  json.t.cpp  json_test.cpp  lexer.t.cpp  list.t.cpp  nibbler.t.cpp  rx.t.cpp  t.t.cpp  tdb2.t.cpp  test.cpp  text.t.cpp  utf8.t.cpp  util.t.cpp  variant_add.t.cpp  variant_cast.t.cpp  view.t.cpp
libs/: CMakeLists.txt
libs/libblake3/: CMakeLists.txt
libs/libcoord/: CMakeLists.txt
libs/libcoord/src/: CMakeLists.txt
libs/libcoord/test/: CMakeLists.txt
libs/libjson/: CMakeLists.txt  README.md
libs/libjson/test/: CMakeLists.txt
libs/liblinal/: CMakeLists.txt
libs/liblinal/test/: CMakeLists.txt
libs/liblog/: CMakeLists.txt
libs/liblynel/: CMakeLists.txt
libs/liblynel/test/: CMakeLists.txt
libs/libmath/: .gitignore  CMakeLists.txt  README.md
libs/libmath/test/: CMakeLists.txt
libs/libnmea/: CMakeLists.txt
libs/libnmea/doc/: README.md
libs/libnmea/test/: CMakeLists.txt
libs/libparm/: .clang-tidy  .gitignore  CMakeLists.txt
libs/libparm/test/: CMakeLists.txt
libs/libparse/: CMakeLists.txt
libs/libstats/: CMakeLists.txt
libs/libstats/test/: CMakeLists.txt
libs/libsymbolic/: CMakeLists.txt
libs/libsymbolic/test/: CMakeLists.txt
libs/libtask/src/: Task.hpp
libs/libvodka/: .clang-format  CMakeLists.txt
libs/libvodka/test/: CMakeLists.txt
libs/linalg/: linalg.h
libs/linalg/samples/: CMakeLists.txt  linalg-test.cpp  linalg-test2.cpp  test-constant-expressions.cpp  test-higher-order-functions.cpp  test-linalg.h  test-matrices.cpp  test-ostream-overloads.cpp  test-quaternions.cpp  test-user-defined-conversions.cpp
libs/lynel/: CMakeLists.txt
libs/lynel/test/: CMakeLists.txt
utils/doctest/: CMakeLists.txt
utils/doctest/src/: main.cpp
(+422 files in other folders)
