################################################################################
# License: The Unlicense (https://unlicense.org)
################################################################################
cmake_minimum_required(VERSION 3.0)

add_subdirectory(Cocles)
add_subdirectory(Goon)
add_subdirectory(StackSolver)
