################################################################################
# License: The Unlicense (https://unlicense.org)
################################################################################

add_subdirectory(Cocles)
add_subdirectory(DailyCodingProblem)
add_subdirectory(Goon)
add_subdirectory(GpsLogger)
add_subdirectory(LearnFLTK)
add_subdirectory(SFML)
add_subdirectory(StackSolver)
