################################################################################
# License: The Unlicense (https://unlicense.org)
################################################################################
cmake_minimum_required(VERSION 3.0)

add_subdirectory(libvodka)
#add_subdirectory(libcoord)
add_subdirectory(libmath)
#add_subdirectory(libparm)
