################################################################################
# License: The Unlicense (https://unlicense.org)
################################################################################

add_subdirectory(libvodka)
add_subdirectory(libcoord)
add_subdirectory(libmath)
add_subdirectory(libparm)
add_subdirectory(liblynel)
add_subdirectory(libjson)
add_subdirectory(libnmea)
add_subdirectory(libstats)
