################################################################################
# License: The Unlicense (https://unlicense.org)
################################################################################

add_subdirectory(libcoord)
add_subdirectory(libjson)
add_subdirectory(liblog)
add_subdirectory(liblynel)
add_subdirectory(libmath)
add_subdirectory(libnmea)
add_subdirectory(libparm)
add_subdirectory(libstats)
add_subdirectory(libvodka)
